frontend/src/app/shared/modules/dynamic-widgets/components/widgets.common.scss
/* WIDGET COMPONENTS */

// NOTE: These styles cover ALL of the widget panels generic classes.

//** NOTE!!
// ? If you are looking for styles of the config tabs when in edit mode,
// ? then you need to look inside the shared/modules/sharedcomponents module
// ? for the common and individual styles of the config tabs
// **

$widgets-common-config: (
    default-padding: 14px,
    edit-padding: 20px,
    tab-width: initial,
    action-bar-height: 30px,
    output-radius: 4px,
    widget-output-height: 300px,
    edit-toolbar-height: 50px,
    edit-toolbar-border-width: 2px
);

@mixin widgets-common-base() {
    // class that goes on the widget components
    $default-padding: map-get($widgets-common-config, default-padding);
    $edit-view-padding: map-get($widgets-common-config, edit-padding);
    $tab-width: map-get($widgets-common-config, tab-width);
    $action-bar-height: map-get($widgets-common-config, action-bar-height);
    $output-radius: map-get($widgets-common-config, output-radius);
    $widget-output-height: map-get($widgets-common-config, widget-output-height);

    .widget-panel-content {
        @include mat-typography-level-to-styles(map-get($app-fontface-config, sans), body-1);
        padding-top: 10px;
        
        .widget-config {
            padding: 0 $default-padding;
        }

        .widget-title,
        .widget-output {
            padding: 0 $default-padding;
        }
        
        .widget-actions {
            padding: $default-padding $edit-view-padding;
        }
        
        .widget-panel-content,
        .widget-controls-container {
            flex: 1 1 100%;
            display: flex;
            flex-direction: column;
            align-items: stretch;
            justify-content: flex-start;
        }
        
        .widget-output-container {
            flex: 1 1 100%;
            display: flex;
            flex-direction: column;
            height: 100%;
        
            .widget-title {
                @include mat-typography-level-to-styles(map-get($app-fontface-config, sans), subheading-2);
                flex: 1 1 $action-bar-height;

                .close-edit-view-btn {
                    min-width: auto;
                    padding: 4px;
                    line-height: 12px;
                    font-size: 12px;
                }
            }
        
            .widget-output {
                flex: 1 1 100%;
            }
        }
        
        .widget-controls-container {
            padding-top: $edit-view-padding;

            .widget-actions {
                flex: 1 1 $action-bar-height;
            }
        } 
        
        // mat-tab-group
        .widget-configs {
            flex: 1 1 100%;
            margin: 12px;
        
            .mat-tab-body-wrapper {
                flex: 1 1 100%;
                display: flex;
                flex-direction: column;
                overflow: hidden auto;
            }
        
            .mat-tab-header {
                //padding: 0 $edit-view-padding;
                padding: 0;
                border-bottom: 0;

                .mat-tab-label {
                    min-width: initial;
                    height: 36px;

                    &:hover {
                        opacity: 1;
                    }

                    // NOTE: assuming the "query editor" is last child
                    // NOTE: can't really add a class to the tab label without a complete rewrite of the tab structure using mat-tab-nav-bar
                    &:last-child {
                        margin-left: auto;
                    }
                }

                .mat-tab-label-active {
                    position: relative;

                    &::after {
                        content: "";
                        display: block;
                        height: 5px;
                        position: absolute;
                        width: calc(100% - 2px);
                        bottom: -3px;
                        z-index: 2;
                    }
                }

                .mat-ink-bar {
                    bottom: calc(100% - 2px);
                }
            }
        
            .mat-tab-body-content {
                //padding: $default-padding $edit-view-padding;
                //padding-top: $default-padding;
                display: flex;
            }

            // NOTE: The actual config tab content styles are located under sharedcomponents module
        } 
        
        // save/cancel buttons
        .widget-actions {
            .mat-raised-button:not(:last-child) {
                margin-right: 6px;
            }
        }
    }

    .multi-graph-container {
        display: flex;
        flex-direction: column;
        justify-content: stretch;
        align-items: stretch;

        .graph-row {
            flex: 1;
            display: flex;
            flex-direction: row;
            justify-content: stretch;
            align-items: stretch;

            &:not(:last-child){
                border-bottom: 1px solid #ccc;
            }
        }

        .graph-cell {
            flex: 1;
            display: flex;
            align-items: center;
            justify-content: center;
            padding: 6px;
            min-width: 200px;
            min-height: 200px;

            &:not(:last-child){
                border-right: 1px solid #ccc;
            }
        }
    }

    // few items need overrides when we are in edit view
    .edit-view-container.is-active {
        .widget-panel-content {
            padding-top: 0;
        }

        .widget-output-container {
            padding: 0 $edit-view-padding;
            max-height: $widget-output-height;
    
            .widget-title {
                margin-top: $default-padding / 2;
                margin-bottom: $default-padding / 2;
            }

            .widget-output {
                height: 350px;
                //padding: $default-padding 0;
                border-radius: $output-radius;
                display: flex;
                justify-content: stretch;
                align-items: center;

            }
        }
    }
}

@mixin widgets-common-theme($theme-config) {
    /* Theme config parts */
    $primary: map-get($theme-config, primary);
    $accent: map-get($theme-config, accent);
    $warn: map-get($theme-config, warn);
    $foreground: map-get($theme-config, foreground);
    $background: map-get($theme-config, background);
    $is-dark-theme: map-get($theme-config, is-dark);
    
    .edit-view-container.is-active {
        .widget-output-container {
            
            .widget-output {
                background-color: map-get($background, card);
            }
        }
    }
    
    .widget-panel-content {

        .widget-configs {
        
            .mat-tab-label:not(.mat-tab-disabled):not(.mat-tab-label-active):focus {
                background-color: transparent;
            }

            .mat-tab-label:not(.mat-tab-label-active) {
                color: map-get($primary, default);
            }

            .mat-tab-label-active,
            .mat-tab-label:not(.mat-tab-disabled):focus {
                opacity: 1;
                background-color: map-get($background, card);
                border-radius: 0;
                box-shadow: inset 1px 0 0 map-get($foreground, dividers), inset -1px 0 0 map-get($foreground, dividers);

                &::after {
                    background-color: map-get($background, card);
                }
            }

            .mat-tab-label.mat-tab-disabled {
                color: #A2A2A5;
                cursor: no-drop;
                pointer-events: none;
            }
            .mat-tab-body {
                background-color: map-get($background, card);
                border: 1px solid map-get($foreground, dividers);
                border-top: 0;
            }

            .mat-tab-header {
                box-shadow: inset 0 -1px 0 map-get($foreground, dividers);
            }
        }

        .widget-actions {
            border-top: 1px solid map-get($foreground, dividers);
        }
    }
}

